[gd_scene load_steps=3 format=3 uid="uid://bsbslu7gvbl5b"]

[ext_resource type="Script" uid="uid://dgdumc3sps2gj" path="res://ui/top_bar_ui/waves_ui/waves_counter_ui.gd" id="1_u7m1g"]
[ext_resource type="LabelSettings" uid="uid://bqa8xh2lpphdf" path="res://ui/styles/label_settings/label_settings_24.tres" id="3_ufrpf"]

[node name="WavesCounterUI" type="VBoxContainer"]
offset_right = 151.0
offset_bottom = 35.0
script = ExtResource("1_u7m1g")

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer2"]
layout_mode = 2
text = "Level:"
label_settings = ExtResource("3_ufrpf")

[node name="LevelLabel" type="Label" parent="HBoxContainer2"]
layout_mode = 2
text = "1"
label_settings = ExtResource("3_ufrpf")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="WavesCounterDescription" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Wave:"
label_settings = ExtResource("3_ufrpf")
vertical_alignment = 1

[node name="WavesCounterCurrent" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "0"
label_settings = ExtResource("3_ufrpf")

[node name="WavesCounterSlash" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "/"
label_settings = ExtResource("3_ufrpf")

[node name="WavesCounterTotal" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "2"
label_settings = ExtResource("3_ufrpf")
